# secure-auth-rbac-template

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/auth/: jwt_handler.py
app/permissions/: permissions.py
app/roles/: roles.py
tests/: test_auth.py
